# rspass

./: AGENTS.md  Cargo.toml  DESIGN.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  RELEASING.md
src/: config.rs  crypto.rs  decrypt.rs  error.rs  identity.rs  main.rs  path.rs  recipients.rs  tty.rs
src/agent/: client.rs  mod.rs  proto.rs  server.rs  socket.rs  spawn.rs
src/cmd/: agent.rs  config.rs  edit.rs  list.rs  mod.rs  show.rs
tests/: agent.rs  agent_cli.rs  edit.rs  list.rs  show.rs  show_with_agent.rs
tests/fixtures/: ssh_ed25519  ssh_ed25519_encrypted
