[package]
name = "rspass"
version = "0.1.0"
edition = "2024"
description = "Minimal age-only command-line secret manager"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
age = { version = "0.11", features = ["ssh", "armor"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
anyhow = "1"
thiserror = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpassword = "7"
zeroize = "1"
tempfile = "3"
serde_json = "1"
base64 = "0.22"
libc = "0.2"

# Build dependencies with optimizations even in dev/test profiles. The age
# crate (and its crypto transitive deps like rsa, scrypt, chacha20poly1305)
# is painfully slow at opt-level=0; this keeps the rspass crate itself
# unoptimized for fast iteration while making tests run at release-ish speed.
[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3
